# sjtu-canvas-video-web

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.omx/plans/: phase-0.md  phase-1.md
config/: example.toml  production.example.toml
crates/canvas-core/: Cargo.toml
crates/canvas-core/src/: canvas.rs  client.rs  constants.rs  error.rs  identity.rs  jaccount.rs  lib.rs  lti.rs  model.rs  redaction.rs  video.rs
crates/canvas-core/src/canvas/: course_diagnostics.rs  courses.rs  identity.rs  login.rs  mod.rs
crates/canvas-core/src/client/: body.rs  config.rs  policy.rs
crates/canvas-core/src/jaccount/: mod.rs  qr.rs  websocket.rs
crates/canvas-core/src/lti/: diagnostics.rs  form.rs  launch.rs  mod.rs  token_id.rs
crates/canvas-core/src/video/: catalog.rs  detail.rs  mod.rs  model.rs  probe.rs  resource.rs  subtitle.rs
crates/canvas-core/tests/: canvas_discovery.rs  canvas_session.rs  context_and_jaccount.rs  context_cookie_domains.rs  full_mock_protocol.rs  identity_hash.rs  jaccount_parsing.rs  lti_parsing.rs  lti_video_flow.rs  range_probe.rs  security_primitives.rs  video_resource.rs  video_safety.rs
crates/canvas-core/tests/support/: full_fixture.rs  lti_fixture.rs  mod.rs  topology.rs
crates/protocol-cli/: Cargo.toml
crates/protocol-cli/src/: args.rs  error.rs  gate.rs  lib.rs  main.rs  output.rs  report.rs  workflow.rs
crates/protocol-cli/src/workflow/: login.rs
crates/protocol-cli/tests/: cli_contract.rs  sensitive_output_scan.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  frontend.rs  gate.rs  gateway.rs  id.rs  lib.rs  main.rs  shutdown.rs  state.rs
crates/server/src/auth/: browser_cookie.rs  invite.rs  login.rs  mod.rs  rate_limit.rs  sse.rs  whitelist.rs  workflow.rs
crates/server/src/auth/pending/: mod.rs  model.rs  store.rs
crates/server/src/config/: validation.rs
crates/server/src/invite/: mod.rs  model.rs  store.rs
crates/server/src/middleware/: cookies.rs  csrf.rs  mod.rs  origin.rs  peer.rs  request_id.rs  request_limit.rs  request_log.rs  security_headers.rs  session.rs
crates/server/src/routes/: auth.rs  courses.rs  download.rs  health.rs  me.rs  mod.rs  subtitles.rs  tickets.rs  videos.rs
crates/server/src/session/: handles.rs  mod.rs  model.rs  resources.rs  store.rs
crates/server/src/stream/: body.rs  direct.rs  filename.rs  headers.rs  mod.rs  proxy.rs  range.rs
crates/server/src/ticket/: mod.rs  model.rs  store.rs
crates/server/tests/: config_whitelist.rs  gateway_refresh.rs  handle_isolation.rs  invite_store.rs  production_config.rs  range_primitives.rs  security_primitives.rs  state_stores.rs  ticket_store.rs  web_auth.rs  web_auth_edges.rs  web_direct_download.rs  web_download.rs  web_download_lifecycle.rs  web_frontend.rs  web_invites.rs  web_logging.rs  web_me.rs  web_rate_limit.rs  web_request_limits.rs  web_resources.rs  web_subtitles.rs  web_ticket_security.rs  web_upstream_errors.rs
crates/server/tests/support/: app.rs  mod.rs  upstream.rs
deploy/: README.md
deploy/cloudflare/: config.example.yml
deploy/macos/: com.example.canvas-video.agent.plist  com.example.canvas-video.daemon.plist
deploy/ubuntu/: Caddyfile  README.md  canvas-video.service  production.example.toml
docs/: api.md  deployment-macos-cloudflare.md  deployment-ubuntu-cloudflare.md  direct-download-experiment.md  download-proxy-security.md  frontend-auth-flow.md  frontend-download-model.md  invitations.md  phase-1-runbook.md  phase-2-backend.md  phase-3-frontend.md  production-acceptance.md  production-ubuntu-acceptance.md  protocol-validation.md  reference-analysis.md  security-model.md  update-and-rollback.md  web-session-model.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
frontend/e2e/: fixture-server.mjs  helpers.ts  mobile.spec.ts  private.spec.ts  public.spec.ts
frontend/src/: app.tsx  main.tsx  router.test.tsx  router.tsx
frontend/src/api/: auth.test.ts  auth.ts  client.test.ts  client.ts  courses.ts  direct_download.test.ts  direct_download.ts  downloads.ts  resources.test.ts  schemas.test.ts  schemas.ts  subtitles.ts
frontend/src/auth/: auth_context.ts  auth_provider.test.tsx  auth_provider.tsx  login_state.test.ts  login_state.ts  use_qr_login.test.tsx  use_qr_login.ts
frontend/src/components/: app_shell.tsx  course_card.tsx  document_title.tsx  empty_state.tsx  error_notice.tsx  loading_state.tsx  subtitle_download_button.tsx  track_download_button.tsx  video_card.tsx
frontend/src/pages/: course_videos_page.test.tsx  course_videos_page.tsx  courses_page.test.tsx  courses_page.tsx  login_page.test.tsx  login_page.tsx  not_found_page.tsx  privacy_page.tsx  video_page.test.tsx  video_page.tsx
frontend/src/styles/: base.css  components.css  layout.css  pages.css  tokens.css
frontend/src/test/: render.tsx  setup.ts
research_sjtu_canvas_helper/: findings_auth_canvas.md  findings_frontend_license.md  findings_lti_video.md  research_plan.md
scripts/: build-release-linux.sh  build-release.ps1  build-release.sh  deploy-ubuntu.sh  healthcheck-ubuntu.sh  healthcheck.sh  install-macos.sh  install-ubuntu.sh  rollback-macos.sh  rollback-ubuntu.sh  update-macos.sh  update-ubuntu.sh  verify-production.sh
scripts/lib/: macos-common.sh  ubuntu-common.sh
scripts/tests/: ubuntu-assets-test.sh  ubuntu-deploy-test.sh
tests/: README.md
