[workspace]
members = ["crates/canvas-core", "crates/server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
axum = "0.8"
dashmap = "6"
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls", "stream"] }
reqwest_cookie_store = "0.9"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
toml = "0.9"
tower = { version = "0.5", features = ["util"] }
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
