[workspace]
members = ["crates/canvas-core", "crates/server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.6", features = ["derive"] }
dashmap = "6"
futures-util = "0.3"
qrcode = { version = "0.14", default-features = false }
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["charset", "cookies", "form", "json", "query", "rustls", "stream"] }
reqwest_cookie_store = "0.10"
scraper = "0.27"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "serde"] }
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.30", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots", "url"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.9"
tower = { version = "0.5", features = ["util"] }
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
