[package]
name = "canvas-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
regex.workspace = true
reqwest.workspace = true
reqwest_cookie_store.workspace = true
scraper.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tracing.workspace = true
unicode-normalization.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
tower.workspace = true
