[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
canvas-core = { path = "../canvas-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower.workspace = true
