[package]
name = "server"
default-run = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
canvas-core = { path = "../canvas-core" }
dashmap.workspace = true
futures-util.workspace = true
getrandom.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tower.workspace = true
